Fix some go code style issues.
