# products/azcontainerregistry/api.yaml
@@ -15,32 +15,86 @@ objects:
     api_name: ContainerRegistry
     base_url: NotUsedInAzure
 
-    azure_sdk_type_defs:
-      '/': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
-        go_type_name: Registry
-      '/location': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
-        go_field_name: Location
-      '/loginServer': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
-        go_field_name: LoginServer
-      '/properties': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
-        go_field_name: RegistryProperties
-        go_type_name: RegistryProperties
-      '/properties/adminUserEnabled': !ruby/object:Api::Azure::SDKTypeDefinition::BooleanObject
-        go_field_name: AdminUserEnabled
-      '/sku': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
-        go_field_name: Sku
-        go_type_name: Sku
-      '/sku/name': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
-        go_field_name: Name
-      '/sku/tier': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
-        go_field_name: Tier
-      '/storageAccount': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
-        go_field_name: StorageAccount
-        go_type_name: StorageAccountProperties
-      '/storageAccount/id': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
-        go_field_name: ID
-      '/tags': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
-        go_field_name: Tags
+    azure_sdk_type_defs: !ruby/object:Api::Azure::SDKTypeDefinitions
+      create:
+        '/': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_type_name: Registry
+        '/location': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Location
+        '/properties': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: RegistryProperties
+          go_type_name: RegistryProperties
+        '/properties/adminUserEnabled': !ruby/object:Api::Azure::SDKTypeDefinition::BooleanObject
+          go_field_name: AdminUserEnabled
+        '/sku': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: Sku
+          go_type_name: Sku
+        '/sku/name': !ruby/object:Api::Azure::SDKTypeDefinition::EnumObject
+          go_field_name: Name
+          go_enum_type_name: SkuName
+        '/sku/tier': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Tier
+        '/properties/storageAccount': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: StorageAccount
+          go_type_name: StorageAccountProperties
+        '/properties/storageAccount/id': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: ID
+        '/tags': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Tags
+      read:
+        '/': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_type_name: Registry
+        '/location': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Location
+        '/loginServer': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: LoginServer
+        '/properties': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: RegistryProperties
+          go_type_name: RegistryProperties
+        '/properties/adminUserEnabled': !ruby/object:Api::Azure::SDKTypeDefinition::BooleanObject
+          go_field_name: AdminUserEnabled
+        '/sku': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: Sku
+          go_type_name: Sku
+        '/sku/name': !ruby/object:Api::Azure::SDKTypeDefinition::EnumObject
+          go_field_name: Name
+          go_enum_type_name: SkuName
+        '/sku/tier': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Tier
+        '/properties/storageAccount': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: StorageAccount
+          go_type_name: StorageAccountProperties
+        '/properties/storageAccount/id': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: ID
+        '/tags': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Tags
+      update:
+        '/': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_type_name: RegistryUpdateParameters
+        '/location': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Location
+        '/loginServer': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: LoginServer
+        '/properties': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: RegistryPropertiesUpdateParameters
+          go_type_name: RegistryPropertiesUpdateParameters
+        '/properties/adminUserEnabled': !ruby/object:Api::Azure::SDKTypeDefinition::BooleanObject
+          go_field_name: AdminUserEnabled
+        '/sku': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: Sku
+          go_type_name: Sku
+        '/sku/name': !ruby/object:Api::Azure::SDKTypeDefinition::EnumObject
+          go_field_name: Name
+          go_enum_type_name: SkuName
+        '/sku/tier': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Tier
+        '/properties/storageAccount': !ruby/object:Api::Azure::SDKTypeDefinition::ComplexObject
+          go_field_name: StorageAccount
+          go_type_name: StorageAccountProperties
+        '/properties/storageAccount/id': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: ID
+        '/tags': !ruby/object:Api::Azure::SDKTypeDefinition::StringObject
+          go_field_name: Tags
 
     azure_id_portion: registries
     azure_create_verb: Create
@@ -90,7 +144,7 @@ objects:
       - !ruby/object:Api::Type::String
         name: 'storageAccountId'
         description: 'The storage account ID of the container registry.'
-        azure_api_path: '/storageAccount/id'
+        azure_api_path: '/properties/storageAccount/id'
       - !ruby/object:Api::Type::String
         name: 'loginServer'
         description: 'The login server of the container registry.'
